// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backend-statement index ast: ast 1`] = `
Object {
  "body": Array [
    Object {
      "key": "connect_timeout",
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 2,
          "offset": 50,
        },
        "start": Object {
          "column": 3,
          "line": 2,
          "offset": 29,
        },
      },
      "type": "BackendDefinition",
      "value": Object {
        "loc": Object {
          "end": Object {
            "column": 23,
            "line": 2,
            "offset": 49,
          },
          "start": Object {
            "column": 22,
            "line": 2,
            "offset": 48,
          },
        },
        "type": "DurationLiteral",
        "value": "1s",
      },
    },
    Object {
      "key": "dynamic",
      "loc": Object {
        "end": Object {
          "column": 18,
          "line": 3,
          "offset": 69,
        },
        "start": Object {
          "column": 3,
          "line": 3,
          "offset": 54,
        },
      },
      "type": "BackendDefinition",
      "value": Object {
        "loc": Object {
          "end": Object {
            "column": 17,
            "line": 3,
            "offset": 68,
          },
          "start": Object {
            "column": 14,
            "line": 3,
            "offset": 65,
          },
        },
        "type": "BooleanLiteral",
        "value": "true",
      },
    },
    Object {
      "key": "port",
      "loc": Object {
        "end": Object {
          "column": 16,
          "line": 4,
          "offset": 86,
        },
        "start": Object {
          "column": 3,
          "line": 4,
          "offset": 73,
        },
      },
      "type": "BackendDefinition",
      "value": Object {
        "loc": Object {
          "end": Object {
            "column": 15,
            "line": 4,
            "offset": 85,
          },
          "start": Object {
            "column": 11,
            "line": 4,
            "offset": 81,
          },
        },
        "type": "StringLiteral",
        "value": "\\"443\\"",
      },
    },
    Object {
      "key": "host",
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 5,
          "offset": 111,
        },
        "start": Object {
          "column": 3,
          "line": 5,
          "offset": 90,
        },
      },
      "type": "BackendDefinition",
      "value": Object {
        "loc": Object {
          "end": Object {
            "column": 23,
            "line": 5,
            "offset": 110,
          },
          "start": Object {
            "column": 11,
            "line": 5,
            "offset": 98,
          },
        },
        "type": "StringLiteral",
        "value": "\\"vaceline.io\\"",
      },
    },
    Object {
      "key": "first_byte_timeout",
      "loc": Object {
        "end": Object {
          "column": 27,
          "line": 6,
          "offset": 139,
        },
        "start": Object {
          "column": 3,
          "line": 6,
          "offset": 115,
        },
      },
      "type": "BackendDefinition",
      "value": Object {
        "loc": Object {
          "end": Object {
            "column": 26,
            "line": 6,
            "offset": 138,
          },
          "start": Object {
            "column": 25,
            "line": 6,
            "offset": 137,
          },
        },
        "type": "DurationLiteral",
        "value": "5s",
      },
    },
    Object {
      "key": "max_connections",
      "loc": Object {
        "end": Object {
          "column": 25,
          "line": 7,
          "offset": 165,
        },
        "start": Object {
          "column": 3,
          "line": 7,
          "offset": 143,
        },
      },
      "type": "BackendDefinition",
      "value": Object {
        "loc": Object {
          "end": Object {
            "column": 24,
            "line": 7,
            "offset": 164,
          },
          "start": Object {
            "column": 22,
            "line": 7,
            "offset": 162,
          },
        },
        "type": "NumericLiteral",
        "value": "100",
      },
    },
    Object {
      "key": "between_bytes_timeout",
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 8,
          "offset": 197,
        },
        "start": Object {
          "column": 3,
          "line": 8,
          "offset": 169,
        },
      },
      "type": "BackendDefinition",
      "value": Object {
        "loc": Object {
          "end": Object {
            "column": 30,
            "line": 8,
            "offset": 196,
          },
          "start": Object {
            "column": 28,
            "line": 8,
            "offset": 194,
          },
        },
        "type": "DurationLiteral",
        "value": "10s",
      },
    },
    Object {
      "key": "ssl",
      "loc": Object {
        "end": Object {
          "column": 14,
          "line": 9,
          "offset": 212,
        },
        "start": Object {
          "column": 3,
          "line": 9,
          "offset": 201,
        },
      },
      "type": "BackendDefinition",
      "value": Object {
        "loc": Object {
          "end": Object {
            "column": 13,
            "line": 9,
            "offset": 211,
          },
          "start": Object {
            "column": 10,
            "line": 9,
            "offset": 208,
          },
        },
        "type": "BooleanLiteral",
        "value": "true",
      },
    },
    Object {
      "key": "probe",
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 18,
          "offset": 474,
        },
        "start": Object {
          "column": 3,
          "line": 10,
          "offset": 216,
        },
      },
      "type": "BackendDefinition",
      "value": Array [
        Object {
          "key": "request",
          "loc": Object {
            "end": Object {
              "column": 118,
              "line": 11,
              "offset": 344,
            },
            "start": Object {
              "column": 5,
              "line": 11,
              "offset": 231,
            },
          },
          "type": "BackendDefinition",
          "value": Object {
            "body": Array [
              Object {
                "loc": Object {
                  "end": Object {
                    "column": 42,
                    "line": 11,
                    "offset": 268,
                  },
                  "start": Object {
                    "column": 16,
                    "line": 11,
                    "offset": 242,
                  },
                },
                "type": "StringLiteral",
                "value": "\\"GET /healthcheck HTTP/1.1\\"",
              },
              Object {
                "loc": Object {
                  "end": Object {
                    "column": 62,
                    "line": 11,
                    "offset": 288,
                  },
                  "start": Object {
                    "column": 44,
                    "line": 11,
                    "offset": 270,
                  },
                },
                "type": "StringLiteral",
                "value": "\\"Host: vaceline.io\\"",
              },
              Object {
                "loc": Object {
                  "end": Object {
                    "column": 82,
                    "line": 11,
                    "offset": 308,
                  },
                  "start": Object {
                    "column": 64,
                    "line": 11,
                    "offset": 290,
                  },
                },
                "type": "StringLiteral",
                "value": "\\"Connection: close\\"",
              },
              Object {
                "loc": Object {
                  "end": Object {
                    "column": 117,
                    "line": 11,
                    "offset": 343,
                  },
                  "start": Object {
                    "column": 84,
                    "line": 11,
                    "offset": 310,
                  },
                },
                "type": "StringLiteral",
                "value": "\\"User-Agent: Vaceline healthcheck\\"",
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 117,
                "line": 11,
                "offset": 343,
              },
              "start": Object {
                "column": 16,
                "line": 11,
                "offset": 242,
              },
            },
            "type": "ConcatExpression",
          },
        },
        Object {
          "key": "threshold",
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 12,
              "offset": 364,
            },
            "start": Object {
              "column": 5,
              "line": 12,
              "offset": 350,
            },
          },
          "type": "BackendDefinition",
          "value": Object {
            "loc": Object {
              "end": Object {
                "column": 18,
                "line": 12,
                "offset": 363,
              },
              "start": Object {
                "column": 18,
                "line": 12,
                "offset": 363,
              },
            },
            "type": "NumericLiteral",
            "value": "1",
          },
        },
        Object {
          "key": "window",
          "loc": Object {
            "end": Object {
              "column": 16,
              "line": 13,
              "offset": 381,
            },
            "start": Object {
              "column": 5,
              "line": 13,
              "offset": 370,
            },
          },
          "type": "BackendDefinition",
          "value": Object {
            "loc": Object {
              "end": Object {
                "column": 15,
                "line": 13,
                "offset": 380,
              },
              "start": Object {
                "column": 15,
                "line": 13,
                "offset": 380,
              },
            },
            "type": "NumericLiteral",
            "value": "2",
          },
        },
        Object {
          "key": "timeout",
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 14,
              "offset": 401,
            },
            "start": Object {
              "column": 5,
              "line": 14,
              "offset": 387,
            },
          },
          "type": "BackendDefinition",
          "value": Object {
            "loc": Object {
              "end": Object {
                "column": 18,
                "line": 14,
                "offset": 400,
              },
              "start": Object {
                "column": 16,
                "line": 14,
                "offset": 398,
              },
            },
            "type": "DurationLiteral",
            "value": "10s",
          },
        },
        Object {
          "key": "initial",
          "loc": Object {
            "end": Object {
              "column": 17,
              "line": 15,
              "offset": 419,
            },
            "start": Object {
              "column": 5,
              "line": 15,
              "offset": 407,
            },
          },
          "type": "BackendDefinition",
          "value": Object {
            "loc": Object {
              "end": Object {
                "column": 16,
                "line": 15,
                "offset": 418,
              },
              "start": Object {
                "column": 16,
                "line": 15,
                "offset": 418,
              },
            },
            "type": "NumericLiteral",
            "value": "1",
          },
        },
        Object {
          "key": "expected_response",
          "loc": Object {
            "end": Object {
              "column": 29,
              "line": 16,
              "offset": 449,
            },
            "start": Object {
              "column": 5,
              "line": 16,
              "offset": 425,
            },
          },
          "type": "BackendDefinition",
          "value": Object {
            "loc": Object {
              "end": Object {
                "column": 28,
                "line": 16,
                "offset": 448,
              },
              "start": Object {
                "column": 26,
                "line": 16,
                "offset": 446,
              },
            },
            "type": "NumericLiteral",
            "value": "200",
          },
        },
        Object {
          "key": "interval",
          "loc": Object {
            "end": Object {
              "column": 20,
              "line": 17,
              "offset": 470,
            },
            "start": Object {
              "column": 5,
              "line": 17,
              "offset": 455,
            },
          },
          "type": "BackendDefinition",
          "value": Object {
            "loc": Object {
              "end": Object {
                "column": 19,
                "line": 17,
                "offset": 469,
              },
              "start": Object {
                "column": 17,
                "line": 17,
                "offset": 467,
              },
            },
            "type": "DurationLiteral",
            "value": "60s",
          },
        },
      ],
    },
  ],
  "id": Object {
    "loc": Object {
      "end": Object {
        "column": 24,
        "line": 1,
        "offset": 23,
      },
      "start": Object {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
    },
    "name": "vaceline_backend",
    "type": "Identifier",
  },
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 19,
      "offset": 476,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "BackendStatement",
}
`;

exports[`backend-statement index format: format long 1`] = `
backend vaceline_backend {
  .connect_timeout = 1s;
  .dynamic = true;
  .port = "443";
  .host = "vaceline.io";
  .first_byte_timeout = 5s;
  .max_connections = 100;
  .between_bytes_timeout = 10s;
  .ssl = true;
  .probe = {
    .request = "GET /healthcheck HTTP/1.1" "Host: vaceline.io" "Connection: close" "User-Agent: Vaceline healthcheck";
    .threshold = 1;
    .window = 2;
    .timeout = 10s;
    .initial = 1;
    .expected_response = 200;
    .interval = 60s;
  }
}
`;

exports[`backend-statement index format: format short 1`] = `
backend vaceline_backend {
  .connect_timeout = 1s;
  .dynamic = true;
  .port = "443";
  .host = "vaceline.io";
  .first_byte_timeout = 5s;
  .max_connections = 100;
  .between_bytes_timeout = 10s;
  .ssl = true;
  .probe = {
    .request = "GET /healthcheck HTTP/1.1"
      "Host: vaceline.io"
      "Connection: close"
      "User-Agent: Vaceline healthcheck";
    .threshold = 1;
    .window = 2;
    .timeout = 10s;
    .initial = 1;
    .expected_response = 200;
    .interval = 60s;
  }
}
`;

exports[`backend-statement index token 1`] = `
Array [
  backend,
  vaceline_backend,
  {,
  .,
  connect_timeout,
  =,
  1,
  s,
  ;,
  .,
  dynamic,
  =,
  true,
  ;,
  .,
  port,
  =,
  "443",
  ;,
  .,
  host,
  =,
  "vaceline.io",
  ;,
  .,
  first_byte_timeout,
  =,
  5,
  s,
  ;,
  .,
  max_connections,
  =,
  100,
  ;,
  .,
  between_bytes_timeout,
  =,
  10,
  s,
  ;,
  .,
  ssl,
  =,
  true,
  ;,
  .,
  probe,
  =,
  {,
  .,
  request,
  =,
  "GET /healthcheck HTTP/1.1",
  "Host: vaceline.io",
  "Connection: close",
  "User-Agent: Vaceline healthcheck",
  ;,
  .,
  threshold,
  =,
  1,
  ;,
  .,
  window,
  =,
  2,
  ;,
  .,
  timeout,
  =,
  10,
  s,
  ;,
  .,
  initial,
  =,
  1,
  ;,
  .,
  expected_response,
  =,
  200,
  ;,
  .,
  interval,
  =,
  60,
  s,
  ;,
  },
  },
]
`;
